--- a/coba-jdbc/pom.xml
+++ b/coba-jdbc/pom.xml
@@ -18,6 +18,13 @@
             <version>6.0.6</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
