--- a/coba-jdbc/pom.xml
+++ b/coba-jdbc/pom.xml
@@ -25,6 +25,14 @@
             <version>42.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
