#15 - Fixed Bug gradle

--- a/belajar-gradle/build.gradle
+++ b/belajar-gradle/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'idea'
 
 // cara lain
  mainClassName = "com.hendisantika.belajar.App"
@@ -20,4 +21,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+//    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+
 }
