--- a/aplikasi-pelatihan/src/main/resources/application.properties
+++ b/aplikasi-pelatihan/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.serialization.indent_output=true
 
 spring.thymeleaf.cache=false
+spring.http.multipart.max-file-size=2MB
+spring.http.multipart.max-request-size=10MB
